support for docker added and some other minor changes